// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. red article flag 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "height": 5,
        "width": 5,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 12,
        "fontWeight": "bold",
        "includeFontPadding": false,
        "letterSpacing": 1,
        "lineHeight": undefined,
        "marginBottom": 0,
        "marginLeft": 5,
        "paddingTop": 1,
        "textTransform": "uppercase",
      }
    }
  >
    coloured red
  </Text>
</View>
`;

exports[`2. multiple article flags 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3C81BE",
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#3C81BE",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 12,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 1,
            "lineHeight": undefined,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingTop": 1,
            "textTransform": "uppercase",
          }
        }
      >
        updated
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#C51D24",
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#C51D24",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 12,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 1,
            "lineHeight": undefined,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingTop": 1,
            "textTransform": "uppercase",
          }
        }
      >
        exclusive
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#E34605",
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#E34605",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 12,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 1,
            "lineHeight": undefined,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingTop": 1,
            "textTransform": "uppercase",
          }
        }
      >
        new
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#4D4D4D",
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#4D4D4D",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 12,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 1,
            "lineHeight": undefined,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingTop": 1,
            "textTransform": "uppercase",
          }
        }
      >
        sponsored
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#696969",
            "height": 5,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#696969",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 12,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 1,
            "lineHeight": undefined,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingTop": 1,
            "textTransform": "uppercase",
          }
        }
      >
        longread
      </Text>
    </View>
  </View>
</View>
`;
